// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onlyPlan arrivalCancelled.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "mediumId": "6062058741531589910-1903161424",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "route": [
        {
          "name": "Mönchengladbach Hbf",
        },
        {
          "name": "Mönchengladbach-Lürrip",
        },
        {
          "name": "Korschenbroich",
        },
        {
          "name": "Kleinenbroich",
        },
        {
          "name": "Büttgen",
        },
        {
          "name": "Neuss Hbf",
        },
        {
          "name": "Neuss Am Kaiser",
        },
        {
          "name": "Neuss Rheinparkcenter",
        },
        {
          "name": "Düsseldorf-Hamm",
        },
        {
          "name": "Düsseldorf Völklinger Str.",
        },
        {
          "name": "Düsseldorf-Bilk",
        },
        {
          "name": "Düsseldorf Friedrichstadt",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        {
          "name": "Düsseldorf-Gerresheim",
        },
        {
          "name": "Erkrath",
        },
        {
          "name": "Hochdahl",
        },
        {
          "name": "Hochdahl-Millrath",
        },
        {
          "name": "Haan-Gruiten",
        },
        {
          "name": "Wuppertal-Vohwinkel",
        },
        {
          "name": "Wuppertal-Sonnborn",
        },
        {
          "name": "Wuppertal-Zoologischer Garten",
        },
        {
          "name": "Wuppertal-Steinbeck",
        },
        {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        {
          "name": "Wuppertal-Unterbarmen",
        },
        {
          "name": "Wuppertal-Barmen",
        },
        {
          "name": "Wuppertal-Oberbarmen",
        },
        {
          "name": "Wuppertal-Langerfeld",
        },
        {
          "name": "Schwelm West",
        },
        {
          "name": "Schwelm",
        },
        {
          "name": "Gevelsberg West",
        },
        {
          "name": "Gevelsberg-Kipp",
        },
        {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        {
          "name": "Gevelsberg-Knapp",
        },
        {
          "name": "Hagen-Westerbauer",
        },
        {
          "name": "Hagen-Heubing",
        },
        {
          "name": "Hagen-Wehringhausen",
        },
        {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": undefined,
      "train": {
        "admin": "800354",
        "line": "8",
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan arrivalWing.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "8",
        "scheduledPlatform": "8",
        "scheduledTime": 2019-03-17T12:32:00.000Z,
        "time": 2019-03-17T12:32:00.000Z,
        "transition": undefined,
        "wingIds": [
          "4550748245722881479-1903170818",
        ],
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "8 D-G",
        "scheduledPlatform": "8 D-G",
        "scheduledTime": 2019-03-17T12:36:00.000Z,
        "time": 2019-03-17T12:36:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Hamburg-Altona",
      "id": "4771830392602697451",
      "initialDeparture": 2019-03-17T08:18:00.000Z,
      "mediumId": "4771830392602697451-1903170818",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "80",
      "platform": "8 D-G",
      "productClass": "F",
      "rawId": "4771830392602697451-1903170818-10",
      "route": [
        {
          "name": "München Hbf",
        },
        {
          "name": "München-Pasing",
        },
        {
          "name": "Augsburg Hbf",
        },
        {
          "name": "Donauwörth",
        },
        {
          "name": "Nürnberg Hbf",
        },
        {
          "name": "Würzburg Hbf",
        },
        {
          "name": "Fulda",
        },
        {
          "name": "Kassel-Wilhelmshöhe",
        },
        {
          "name": "Göttingen",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Hamburg-Harburg",
          "showVia": true,
        },
        {
          "name": "Hamburg Hbf",
          "showVia": true,
        },
        {
          "name": "Hamburg Dammtor",
        },
        {
          "name": "Hamburg-Altona",
        },
      ],
      "scheduledDestination": "Hamburg-Altona",
      "scheduledPlatform": "8 D-G",
      "substitute": undefined,
      "train": {
        "admin": "80",
        "line": undefined,
        "name": "ICE 1680",
        "number": "1680",
        "type": "ICE",
      },
    },
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "8",
        "scheduledPlatform": "8",
        "scheduledTime": 2019-03-17T12:32:00.000Z,
        "time": 2019-03-17T12:32:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "8 A-D",
        "scheduledPlatform": "8 A-D",
        "scheduledTime": 2019-03-17T12:45:00.000Z,
        "time": 2019-03-17T12:45:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Bremen Hbf",
      "id": "4550748245722881479",
      "initialDeparture": 2019-03-17T08:18:00.000Z,
      "mediumId": "4550748245722881479-1903170818",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "80",
      "platform": "8 A-D",
      "productClass": "F",
      "rawId": "-4550748245722881479-1903170818-10",
      "route": [
        {
          "name": "München Hbf",
        },
        {
          "name": "München-Pasing",
        },
        {
          "name": "Augsburg Hbf",
        },
        {
          "name": "Donauwörth",
        },
        {
          "name": "Nürnberg Hbf",
        },
        {
          "name": "Würzburg Hbf",
        },
        {
          "name": "Fulda",
        },
        {
          "name": "Kassel-Wilhelmshöhe",
        },
        {
          "name": "Göttingen",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Bremen Hbf",
        },
      ],
      "scheduledDestination": "Bremen Hbf",
      "scheduledPlatform": "8 A-D",
      "substitute": undefined,
      "train": {
        "admin": "80",
        "line": undefined,
        "name": "ICE 1580",
        "number": "1580",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan cancelled.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "mediumId": "6062058741531589910-1903161424",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "route": [
        {
          "name": "Mönchengladbach Hbf",
        },
        {
          "name": "Mönchengladbach-Lürrip",
        },
        {
          "name": "Korschenbroich",
        },
        {
          "name": "Kleinenbroich",
        },
        {
          "name": "Büttgen",
        },
        {
          "name": "Neuss Hbf",
        },
        {
          "name": "Neuss Am Kaiser",
        },
        {
          "name": "Neuss Rheinparkcenter",
        },
        {
          "name": "Düsseldorf-Hamm",
        },
        {
          "name": "Düsseldorf Völklinger Str.",
        },
        {
          "name": "Düsseldorf-Bilk",
        },
        {
          "name": "Düsseldorf Friedrichstadt",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        {
          "name": "Düsseldorf-Gerresheim",
        },
        {
          "name": "Erkrath",
        },
        {
          "name": "Hochdahl",
        },
        {
          "name": "Hochdahl-Millrath",
        },
        {
          "name": "Haan-Gruiten",
        },
        {
          "name": "Wuppertal-Vohwinkel",
        },
        {
          "name": "Wuppertal-Sonnborn",
        },
        {
          "name": "Wuppertal-Zoologischer Garten",
        },
        {
          "name": "Wuppertal-Steinbeck",
        },
        {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        {
          "name": "Wuppertal-Unterbarmen",
        },
        {
          "name": "Wuppertal-Barmen",
        },
        {
          "name": "Wuppertal-Oberbarmen",
        },
        {
          "name": "Wuppertal-Langerfeld",
        },
        {
          "name": "Schwelm West",
        },
        {
          "name": "Schwelm",
        },
        {
          "name": "Gevelsberg West",
        },
        {
          "name": "Gevelsberg-Kipp",
        },
        {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        {
          "name": "Gevelsberg-Knapp",
        },
        {
          "name": "Hagen-Westerbauer",
        },
        {
          "name": "Hagen-Heubing",
        },
        {
          "name": "Hagen-Wehringhausen",
        },
        {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": undefined,
      "train": {
        "admin": "800354",
        "line": "8",
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan departureCancelled.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "mediumId": "6062058741531589910-1903161424",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "route": [
        {
          "name": "Mönchengladbach Hbf",
        },
        {
          "name": "Mönchengladbach-Lürrip",
        },
        {
          "name": "Korschenbroich",
        },
        {
          "name": "Kleinenbroich",
        },
        {
          "name": "Büttgen",
        },
        {
          "name": "Neuss Hbf",
        },
        {
          "name": "Neuss Am Kaiser",
        },
        {
          "name": "Neuss Rheinparkcenter",
        },
        {
          "name": "Düsseldorf-Hamm",
        },
        {
          "name": "Düsseldorf Völklinger Str.",
        },
        {
          "name": "Düsseldorf-Bilk",
        },
        {
          "name": "Düsseldorf Friedrichstadt",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        {
          "name": "Düsseldorf-Gerresheim",
        },
        {
          "name": "Erkrath",
        },
        {
          "name": "Hochdahl",
        },
        {
          "name": "Hochdahl-Millrath",
        },
        {
          "name": "Haan-Gruiten",
        },
        {
          "name": "Wuppertal-Vohwinkel",
        },
        {
          "name": "Wuppertal-Sonnborn",
        },
        {
          "name": "Wuppertal-Zoologischer Garten",
        },
        {
          "name": "Wuppertal-Steinbeck",
        },
        {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        {
          "name": "Wuppertal-Unterbarmen",
        },
        {
          "name": "Wuppertal-Barmen",
        },
        {
          "name": "Wuppertal-Oberbarmen",
        },
        {
          "name": "Wuppertal-Langerfeld",
        },
        {
          "name": "Schwelm West",
        },
        {
          "name": "Schwelm",
        },
        {
          "name": "Gevelsberg West",
        },
        {
          "name": "Gevelsberg-Kipp",
        },
        {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        {
          "name": "Gevelsberg-Knapp",
        },
        {
          "name": "Hagen-Westerbauer",
        },
        {
          "name": "Hagen-Heubing",
        },
        {
          "name": "Hagen-Wehringhausen",
        },
        {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": undefined,
      "train": {
        "admin": "800354",
        "line": "8",
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan departureWing.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "4 D-G",
        "scheduledPlatform": "4 D-G",
        "scheduledTime": 2019-03-17T13:22:00.000Z,
        "time": 2019-03-17T13:22:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:26:00.000Z,
        "time": 2019-03-17T13:26:00.000Z,
        "transition": undefined,
        "wingIds": [
          "8086827825752200553-1903171315",
        ],
      },
      "destination": "München Hbf",
      "id": "6523045328284948841",
      "initialDeparture": 2019-03-17T12:46:00.000Z,
      "mediumId": "6523045328284948841-1903171246",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "6523045328284948841-1903171246-5",
      "route": [
        {
          "name": "Hamburg-Altona",
        },
        {
          "name": "Hamburg Dammtor",
        },
        {
          "name": "Hamburg Hbf",
        },
        {
          "name": "Hamburg-Harburg",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Göttingen",
          "showVia": true,
        },
        {
          "name": "Kassel-Wilhelmshöhe",
        },
        {
          "name": "Fulda",
        },
        {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        {
          "name": "Nürnberg Hbf",
          "showVia": true,
        },
        {
          "name": "Ingolstadt Hbf",
        },
        {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": undefined,
      "train": {
        "admin": "80",
        "line": undefined,
        "name": "ICE 1689",
        "number": "1689",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {
    "8086827825752200553-1903171315": {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "4 A-C",
        "scheduledPlatform": "4 A-C",
        "scheduledTime": 2019-03-17T13:14:00.000Z,
        "time": 2019-03-17T13:14:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:26:00.000Z,
        "time": 2019-03-17T13:26:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "München Hbf",
      "id": "8086827825752200553",
      "initialDeparture": 2019-03-17T13:15:00.000Z,
      "mediumId": "8086827825752200553-1903171315",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "-8086827825752200553-1903171315-2",
      "route": [
        {
          "name": "Bremen Hbf",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Göttingen",
          "showVia": true,
        },
        {
          "name": "Kassel-Wilhelmshöhe",
        },
        {
          "name": "Fulda",
        },
        {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        {
          "name": "Nürnberg Hbf",
          "showVia": true,
        },
        {
          "name": "Ingolstadt Hbf",
        },
        {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": undefined,
      "train": {
        "admin": "80",
        "line": undefined,
        "name": "ICE 1589",
        "number": "1589",
        "type": "ICE",
      },
    },
  },
}
`;

exports[`onlyPlan filteredDueToTime.xml 1`] = `
{
  "departures": [],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan lookbehind.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:49:00.000Z,
        "time": 2019-03-17T12:49:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:51:00.000Z,
        "time": 2019-03-17T12:51:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Frankfurt (Main) Hbf",
      "id": "1869793107893408377",
      "initialDeparture": 2019-03-17T10:38:00.000Z,
      "mediumId": "1869793107893408377-1903171038",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "84",
      "platform": "16",
      "productClass": "F",
      "rawId": "1869793107893408377-1903171038-6",
      "route": [
        {
          "name": "Amsterdam Centraal",
        },
        {
          "name": "Utrecht Centraal",
        },
        {
          "name": "Arnhem Centraal",
        },
        {
          "name": "Oberhausen Hbf",
        },
        {
          "name": "Duisburg Hbf",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Köln Hbf",
          "showVia": true,
        },
        {
          "name": "Frankfurt (M)  Flughafen Fernbf",
          "showVia": true,
        },
        {
          "name": "Frankfurt (Main) Hbf",
        },
      ],
      "scheduledDestination": "Frankfurt (Main) Hbf",
      "scheduledPlatform": "16",
      "substitute": undefined,
      "train": {
        "admin": "84",
        "line": undefined,
        "name": "ICE 123",
        "number": "123",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan multipleWings.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": undefined,
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:04:00.000Z,
        "transition": undefined,
        "wingIds": [
          "2583448959431566845-1903171304",
          "7715731422484591852-1903171304",
        ],
      },
      "destination": "Bayrischzell",
      "id": "4645697665836328305",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "mediumId": "4645697665836328305-1903171304",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "4645697665836328305-1903171304-1",
      "route": [
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "München Harras",
          "showVia": true,
        },
        {
          "name": "München-Solln",
          "showVia": true,
        },
        {
          "name": "Holzkirchen",
          "showVia": true,
        },
        {
          "name": "Darching",
        },
        {
          "name": "Miesbach",
        },
        {
          "name": "Agatharied",
        },
        {
          "name": "Hausham",
        },
        {
          "name": "Schliersee",
        },
        {
          "name": "Fischhausen-Neuhaus",
        },
        {
          "name": "Fischbachau",
        },
        {
          "name": "Geitau",
        },
        {
          "name": "Osterhofen (Oberbay)",
        },
        {
          "name": "Bayrischzell",
        },
      ],
      "scheduledDestination": "Bayrischzell",
      "scheduledPlatform": "34",
      "substitute": undefined,
      "train": {
        "admin": "T8",
        "line": undefined,
        "name": "BOB 86871",
        "number": "86871",
        "type": "BOB",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {
    "2583448959431566845-1903171304": {
      "additional": undefined,
      "arrival": undefined,
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:04:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Tegernsee",
      "id": "2583448959431566845",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "mediumId": "2583448959431566845-1903171304",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "-2583448959431566845-1903171304-1",
      "route": [
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "München Harras",
          "showVia": true,
        },
        {
          "name": "München-Solln",
          "showVia": true,
        },
        {
          "name": "Holzkirchen",
          "showVia": true,
        },
        {
          "name": "Warngau",
        },
        {
          "name": "Schaftlach",
        },
        {
          "name": "Moosrain",
        },
        {
          "name": "Finsterwald",
        },
        {
          "name": "Gmund (Tegernsee)",
        },
        {
          "name": "Tegernsee",
        },
      ],
      "scheduledDestination": "Tegernsee",
      "scheduledPlatform": "34",
      "substitute": undefined,
      "train": {
        "admin": "T8",
        "line": undefined,
        "name": "BOB 86971",
        "number": "86971",
        "type": "BOB",
      },
    },
    "7715731422484591852-1903171304": {
      "additional": undefined,
      "arrival": undefined,
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "34",
        "scheduledPlatform": "34",
        "scheduledTime": 2019-03-17T12:04:00.000Z,
        "time": 2019-03-17T12:04:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Lenggries",
      "id": "7715731422484591852",
      "initialDeparture": 2019-03-17T13:04:00.000Z,
      "mediumId": "7715731422484591852-1903171304",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "T8",
      "platform": "34",
      "productClass": "D",
      "rawId": "-7715731422484591852-1903171304-1",
      "route": [
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "München Harras",
          "showVia": true,
        },
        {
          "name": "München-Solln",
          "showVia": true,
        },
        {
          "name": "Holzkirchen",
          "showVia": true,
        },
        {
          "name": "Warngau",
        },
        {
          "name": "Schaftlach",
        },
        {
          "name": "Reichersbeuern",
        },
        {
          "name": "Bad Tölz",
        },
        {
          "name": "Gaißach",
        },
        {
          "name": "Obergries",
        },
        {
          "name": "Lenggries",
        },
      ],
      "scheduledDestination": "Lenggries",
      "scheduledPlatform": "34",
      "substitute": undefined,
      "train": {
        "admin": "T8",
        "line": undefined,
        "name": "BOB 86921",
        "number": "86921",
        "type": "BOB",
      },
    },
  },
}
`;

exports[`onlyPlan onlyArrival.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "10",
        "scheduledPlatform": "10",
        "scheduledTime": 2019-03-17T12:24:00.000Z,
        "time": 2019-03-17T12:24:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": undefined,
      "destination": "test",
      "id": "425081070176277607",
      "initialDeparture": 2019-03-17T11:00:00.000Z,
      "mediumId": "425081070176277607-1903171100",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "AR",
      "platform": "10",
      "productClass": "D",
      "rawId": "425081070176277607-1903171100-11",
      "route": [
        {
          "name": "Hamm (Westf)",
        },
        {
          "name": "Kamen",
        },
        {
          "name": "Kamen-Methler",
        },
        {
          "name": "Dortmund Hbf",
        },
        {
          "name": "Bochum Hbf",
        },
        {
          "name": "Wattenscheid",
        },
        {
          "name": "Essen Hbf",
        },
        {
          "name": "Mülheim (Ruhr) Hbf",
        },
        {
          "name": "Duisburg Hbf",
        },
        {
          "name": "Düsseldorf Flughafen",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
      ],
      "scheduledDestination": "test",
      "scheduledPlatform": "10",
      "substitute": undefined,
      "train": {
        "admin": "AR",
        "line": "RE11",
        "name": "ABR RE11",
        "number": "26712",
        "type": "ABR",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan onlyDeparture.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": undefined,
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "10",
        "scheduledPlatform": "10",
        "scheduledTime": 2019-03-17T12:36:00.000Z,
        "time": 2019-03-17T12:36:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Paderborn Hbf",
      "id": "1178432179369711067",
      "initialDeparture": 2019-03-17T12:36:00.000Z,
      "mediumId": "1178432179369711067-1903171236",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "AR",
      "platform": "10",
      "productClass": "D",
      "rawId": "1178432179369711067-1903171236-1",
      "route": [
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Düsseldorf Flughafen",
          "showVia": true,
        },
        {
          "name": "Duisburg Hbf",
          "showVia": true,
        },
        {
          "name": "Mülheim (Ruhr) Hbf",
          "showVia": true,
        },
        {
          "name": "Essen Hbf",
        },
        {
          "name": "Wattenscheid",
        },
        {
          "name": "Bochum Hbf",
        },
        {
          "name": "Dortmund Hbf",
        },
        {
          "name": "Kamen-Methler",
        },
        {
          "name": "Kamen",
        },
        {
          "name": "Hamm (Westf)",
        },
        {
          "name": "Soest",
        },
        {
          "name": "Lippstadt",
        },
        {
          "name": "Paderborn Hbf",
        },
      ],
      "scheduledDestination": "Paderborn Hbf",
      "scheduledPlatform": "10",
      "substitute": undefined,
      "train": {
        "admin": "AR",
        "line": "RE11",
        "name": "ABR RE11",
        "number": "26719",
        "type": "ABR",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan simple1.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T12:58:00.000Z,
        "time": 2019-03-17T12:58:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "13",
        "scheduledPlatform": "13",
        "scheduledTime": 2019-03-17T13:00:00.000Z,
        "time": 2019-03-17T13:00:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Hagen Hbf",
      "id": "6062058741531589910",
      "initialDeparture": 2019-03-16T14:24:00.000Z,
      "mediumId": "6062058741531589910-1903161424",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "800354",
      "platform": "13",
      "productClass": "S",
      "rawId": "-6062058741531589910-1903161424-13",
      "route": [
        {
          "name": "Mönchengladbach Hbf",
        },
        {
          "name": "Mönchengladbach-Lürrip",
        },
        {
          "name": "Korschenbroich",
        },
        {
          "name": "Kleinenbroich",
        },
        {
          "name": "Büttgen",
        },
        {
          "name": "Neuss Hbf",
        },
        {
          "name": "Neuss Am Kaiser",
        },
        {
          "name": "Neuss Rheinparkcenter",
        },
        {
          "name": "Düsseldorf-Hamm",
        },
        {
          "name": "Düsseldorf Völklinger Str.",
        },
        {
          "name": "Düsseldorf-Bilk",
        },
        {
          "name": "Düsseldorf Friedrichstadt",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Düsseldorf-Flingern",
          "showVia": true,
        },
        {
          "name": "Düsseldorf-Gerresheim",
        },
        {
          "name": "Erkrath",
        },
        {
          "name": "Hochdahl",
        },
        {
          "name": "Hochdahl-Millrath",
        },
        {
          "name": "Haan-Gruiten",
        },
        {
          "name": "Wuppertal-Vohwinkel",
        },
        {
          "name": "Wuppertal-Sonnborn",
        },
        {
          "name": "Wuppertal-Zoologischer Garten",
        },
        {
          "name": "Wuppertal-Steinbeck",
        },
        {
          "name": "Wuppertal Hbf",
          "showVia": true,
        },
        {
          "name": "Wuppertal-Unterbarmen",
        },
        {
          "name": "Wuppertal-Barmen",
        },
        {
          "name": "Wuppertal-Oberbarmen",
        },
        {
          "name": "Wuppertal-Langerfeld",
        },
        {
          "name": "Schwelm West",
        },
        {
          "name": "Schwelm",
        },
        {
          "name": "Gevelsberg West",
        },
        {
          "name": "Gevelsberg-Kipp",
        },
        {
          "name": "Gevelsberg Hbf",
          "showVia": true,
        },
        {
          "name": "Gevelsberg-Knapp",
        },
        {
          "name": "Hagen-Westerbauer",
        },
        {
          "name": "Hagen-Heubing",
        },
        {
          "name": "Hagen-Wehringhausen",
        },
        {
          "name": "Hagen Hbf",
        },
      ],
      "scheduledDestination": "Hagen Hbf",
      "scheduledPlatform": "13",
      "substitute": undefined,
      "train": {
        "admin": "800354",
        "line": "8",
        "name": "S 8",
        "number": "30889",
        "type": "S",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan simple2.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:46:00.000Z,
        "time": 2019-03-17T12:46:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "16",
        "scheduledPlatform": "16",
        "scheduledTime": 2019-03-17T12:48:00.000Z,
        "time": 2019-03-17T12:48:00.000Z,
        "transition": undefined,
        "wingIds": undefined,
      },
      "destination": "Frankfurt (Main) Hbf",
      "id": "1869793107893408377",
      "initialDeparture": 2019-03-17T10:38:00.000Z,
      "mediumId": "1869793107893408377-1903171038",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "84",
      "platform": "16",
      "productClass": "F",
      "rawId": "1869793107893408377-1903171038-6",
      "route": [
        {
          "name": "Amsterdam Centraal",
        },
        {
          "name": "Utrecht Centraal",
        },
        {
          "name": "Arnhem Centraal",
        },
        {
          "name": "Oberhausen Hbf",
        },
        {
          "name": "Duisburg Hbf",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Köln Hbf",
          "showVia": true,
        },
        {
          "name": "Frankfurt (M)  Flughafen Fernbf",
          "showVia": true,
        },
        {
          "name": "Frankfurt (Main) Hbf",
        },
      ],
      "scheduledDestination": "Frankfurt (Main) Hbf",
      "scheduledPlatform": "16",
      "substitute": undefined,
      "train": {
        "admin": "84",
        "line": undefined,
        "name": "ICE 123",
        "number": "123",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan visibleDueToDelay.xml 1`] = `
{
  "departures": [],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;

exports[`onlyPlan wings.xml 1`] = `
{
  "departures": [
    {
      "additional": undefined,
      "arrival": {
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:51:00.000Z,
        "time": 2019-03-17T13:51:00.000Z,
        "transition": undefined,
        "wingIds": [
          "4249721926697031159-1903171328",
        ],
      },
      "cancelled": undefined,
      "currentStopPlace": {
        "evaNumber": "test",
        "name": "test",
      },
      "departure": {
        "hidden": false,
        "platform": "4",
        "scheduledPlatform": "4",
        "scheduledTime": 2019-03-17T13:54:00.000Z,
        "time": 2019-03-17T13:54:00.000Z,
        "transition": undefined,
        "wingIds": [
          "4249721926697031159-1903171328",
        ],
      },
      "destination": "München Hbf",
      "id": "7616096009230090656",
      "initialDeparture": 2019-03-17T13:28:00.000Z,
      "mediumId": "7616096009230090656-1903171328",
      "messages": {
        "delay": [],
        "him": [],
        "qos": [],
      },
      "o": "80",
      "platform": "4",
      "productClass": "F",
      "rawId": "7616096009230090656-1903171328-5",
      "route": [
        {
          "name": "Hamburg Hbf",
        },
        {
          "name": "Hamburg-Harburg",
        },
        {
          "name": "Lüneburg",
        },
        {
          "name": "Uelzen",
        },
        {
          "additional": undefined,
          "cancelled": undefined,
          "name": "test",
        },
        {
          "name": "Göttingen",
          "showVia": true,
        },
        {
          "name": "Kassel-Wilhelmshöhe",
        },
        {
          "name": "Fulda",
        },
        {
          "name": "Würzburg Hbf",
          "showVia": true,
        },
        {
          "name": "Treuchtlingen",
        },
        {
          "name": "Donauwörth",
        },
        {
          "name": "Augsburg Hbf",
          "showVia": true,
        },
        {
          "name": "München Hbf",
        },
      ],
      "scheduledDestination": "München Hbf",
      "scheduledPlatform": "4",
      "substitute": undefined,
      "train": {
        "admin": "80",
        "line": undefined,
        "name": "ICE 1587",
        "number": "1587",
        "type": "ICE",
      },
    },
  ],
  "lookbehind": [],
  "stopPlaces": [
    "test",
  ],
  "wings": {},
}
`;
